# sample-crossCompile

project/lameProject/app/: CMakeLists.txt  build.gradle
project/lameProject/app/src/androidTest/java/com/kingpei/lameproject/: ExampleInstrumentedTest.kt
project/lameProject/app/src/main/: AndroidManifest.xml
project/lameProject/app/src/main/cpp/: mp3encoder.cpp  mp3encoderWorker.cpp
project/lameProject/app/src/main/cpp/include/encoder/: mp3encoder.h  mp3encoderWorker.h
project/lameProject/app/src/main/java/com/kingpei/lameproject/: MainActivity.kt  Mp3Encoder.java
project/lameProject/app/src/main/res/values/: strings.xml
project/lameProject/app/src/test/java/com/kingpei/lameproject/: ExampleUnitTest.kt
project/lameProject/gradle/wrapper/: gradle-wrapper.properties
shell/: lameCross.sh  lameCross1.sh
